--- a/ProjectExpenseControl/ProjectExpenseControl.csproj
+++ b/ProjectExpenseControl/ProjectExpenseControl.csproj
@@ -54,10 +54,19 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="itextsharp, Version=5.5.13.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>..\packages\iTextSharp.5.5.13\lib\itextsharp.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.7\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Rotativa.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rotativa.Core.2.0.0\lib\net45\Rotativa.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Rotativa.MVC, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rotativa.MVC.2.0.3\lib\net45\Rotativa.MVC.dll</HintPath>
+    </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -460,22 +469,22 @@
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Images\detalles.png" />
+    <Content Include="Images\editar.png" />
+    <Content Include="Images\eliminar.png" />
+    <Content Include="Images\logo.png" />
     <Content Include="Migrations\SQL\DROP_SP.sql" />
     <Content Include="Migrations\SQL\Create_SP_InsertUserAddRoleDefault.sql" />
     <Content Include="Migrations\SQL\Create_SP_DeleteUserRemoveRole.sql" />
+    <Content Include="Rotativa\wkhtmltopdf.exe" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Content\jqwidgets\images\colorpicker\Thumbs.db" />
-    <Content Include="Content\jqwidgets\images\darkness\Thumbs.db" />
-    <Content Include="Content\jqwidgets\images\le-frog\Thumbs.db" />
-    <Content Include="Content\jqwidgets\images\lightness\Thumbs.db" />
-    <Content Include="Content\jqwidgets\images\overcast\Thumbs.db" />
-    <Content Include="Content\jqwidgets\images\redmond\Thumbs.db" />
-    <Content Include="Content\jqwidgets\images\smoothness\Thumbs.db" />
-    <Content Include="Content\jqwidgets\images\start\Thumbs.db" />
-    <Content Include="Content\jqwidgets\images\sunny\Thumbs.db" />
-    <Content Include="Content\jqwidgets\images\Thumbs.db" />
-    <Content Include="Content\jqwidgets\Thumbs.db" />
+    <Content Include="App_Browsers\qt.browser" />
+    <Content Include="Xml\archivoXML2.xml" />
+    <Content Include="Xml\archivoXML3.xml" />
+    <Content Include="Xml\archivoXML4.xml" />
+    <Content Include="Xml\archivoXML5.xml" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
@@ -605,13 +614,14 @@
     <Compile Include="Controllers\AccountingAccountsController.cs" />
     <Compile Include="Controllers\AreasController.cs" />
     <Compile Include="Controllers\BudgetsController.cs" />
+    <Compile Include="Controllers\CreatePDFController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\InvoicesController.cs" />
+    <Compile Include="Controllers\ReportsController.cs" />
     <Compile Include="Controllers\RequestsController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\StatusAprovsController.cs" />
     <Compile Include="Controllers\UserController.cs" />
-    <Compile Include="Controllers\UserRolesController.cs" />
     <Compile Include="CustomAuthentication\CustomAuthorizeAttribute.cs" />
     <Compile Include="CustomAuthentication\CustomMembership.cs" />
     <Compile Include="CustomAuthentication\CustomMembershipUser.cs" />
@@ -649,12 +659,16 @@
     <Compile Include="Services\AccountingAccountRepository.cs" />
     <Compile Include="Services\AreaRepository.cs" />
     <Compile Include="Services\BudgetRepository.cs" />
+    <Compile Include="Services\Invoice\cfdv33_tdCFDI_catCFDI.cs" />
+    <Compile Include="Services\Invoice\Moneda.cs" />
+    <Compile Include="Services\Invoice\QR.cs" />
+    <Compile Include="Services\Invoice\TimbreFiscalDigitalv11_tdCFDI.cs" />
     <Compile Include="Services\InvoicesRepository.cs" />
+    <Compile Include="Services\ReportsRepository.cs" />
     <Compile Include="Services\RequestsRepository.cs" />
     <Compile Include="Services\RoleRepository.cs" />
     <Compile Include="Services\StatusAprovRepository.cs" />
     <Compile Include="Services\UserRepository.cs" />
-    <Compile Include="Services\UserRoleRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config">
@@ -705,11 +719,6 @@
     <Content Include="Views\Roles\Index.cshtml" />
     <Content Include="Views\Areas\Details.cshtml" />
     <Content Include="Views\Account\CreateRole.cshtml" />
-    <Content Include="Views\UserRoles\Create.cshtml" />
-    <Content Include="Views\UserRoles\Delete.cshtml" />
-    <Content Include="Views\UserRoles\Details.cshtml" />
-    <Content Include="Views\UserRoles\Edit.cshtml" />
-    <Content Include="Views\UserRoles\Index.cshtml" />
     <Content Include="Views\Account\Registration.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\User\Details.cshtml" />
@@ -717,6 +726,11 @@
     <Content Include="Views\Areas\Delete.cshtml" />
     <Content Include="Views\User\Edit.cshtml" />
     <Content Include="Views\User\Delete.cshtml" />
+    <Content Include="Views\Shared\_LayoutInvoice.cshtml" />
+    <Content Include="Views\CreatePDF\CreateInvoicePDF.cshtml" />
+    <Content Include="Views\Requests\Prove.cshtml" />
+    <Content Include="Views\Reports\ViewGetAreas.cshtml" />
+    <Content Include="Views\Shared\_LayoutBottonsExportData.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
