En la vista de solicitudes ya se puede filtrar por usuario y tipo de usuario con el store GetRequests aun falta validar en la vista ya que puede variar. Detalles en la vista y en el nav

--- a/ProjectExpenseControl/ProjectExpenseControl.csproj
+++ b/ProjectExpenseControl/ProjectExpenseControl.csproj
@@ -476,6 +476,7 @@
     <Content Include="Migrations\SQL\DROP_SP.sql" />
     <Content Include="Migrations\SQL\Create_SP_InsertUserAddRoleDefault.sql" />
     <Content Include="Migrations\SQL\Create_SP_DeleteUserRemoveRole.sql" />
+    <Content Include="Migrations\SQL\Create_SP_GetRequests.sql" />
     <Content Include="Rotativa\wkhtmltopdf.exe" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
