--- a/ProjectExpenseControl/ProjectExpenseControl.csproj
+++ b/ProjectExpenseControl/ProjectExpenseControl.csproj
@@ -61,11 +61,11 @@
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.7\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Rotativa, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rotativa.1.7.3\lib\net461\Rotativa.dll</HintPath>
+    </Reference>
     <Reference Include="Rotativa.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Rotativa.Core.2.0.0\lib\net45\Rotativa.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Rotativa.MVC, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Rotativa.MVC.2.0.3\lib\net45\Rotativa.MVC.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.DynamicData" />
@@ -477,14 +477,17 @@
     <Content Include="Migrations\SQL\Create_SP_InsertUserAddRoleDefault.sql" />
     <Content Include="Migrations\SQL\Create_SP_DeleteUserRemoveRole.sql" />
     <Content Include="Migrations\SQL\Create_SP_GetRequests.sql" />
+    <Content Include="Rotativa\help-wkhtmltoimage.txt" />
+    <Content Include="Rotativa\help-wkhtmltopdf.txt" />
+    <Content Include="Rotativa\wkhtmltoimage.exe" />
     <Content Include="Rotativa\wkhtmltopdf.exe" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="App_Browsers\qt.browser" />
     <Content Include="Xml\archivoXML2.xml" />
     <Content Include="Xml\archivoXML3.xml" />
     <Content Include="Xml\archivoXML4.xml" />
     <Content Include="Xml\archivoXML5.xml" />
+    <Content Include="App_Browsers\qt.browser" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
@@ -660,6 +663,7 @@
     <Compile Include="Services\AccountingAccountRepository.cs" />
     <Compile Include="Services\AreaRepository.cs" />
     <Compile Include="Services\BudgetRepository.cs" />
+    <Compile Include="Services\FilesRepository.cs" />
     <Compile Include="Services\Invoice\cfdv33_tdCFDI_catCFDI.cs" />
     <Compile Include="Services\Invoice\Moneda.cs" />
     <Compile Include="Services\Invoice\QR.cs" />
@@ -741,6 +745,30 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Xml\10\" />
+    <Folder Include="Xml\11\" />
+    <Folder Include="Xml\12\" />
+    <Folder Include="Xml\13\" />
+    <Folder Include="Xml\14\" />
+    <Folder Include="Xml\15\" />
+    <Folder Include="Xml\16\" />
+    <Folder Include="Xml\17\" />
+    <Folder Include="Xml\18\" />
+    <Folder Include="Xml\19\" />
+    <Folder Include="Xml\1\" />
+    <Folder Include="Xml\20\" />
+    <Folder Include="Xml\21\" />
+    <Folder Include="Xml\22\" />
+    <Folder Include="Xml\23\" />
+    <Folder Include="Xml\24\" />
+    <Folder Include="Xml\2\" />
+    <Folder Include="Xml\3\" />
+    <Folder Include="Xml\4\" />
+    <Folder Include="Xml\5\" />
+    <Folder Include="Xml\6\" />
+    <Folder Include="Xml\7\" />
+    <Folder Include="Xml\8\" />
+    <Folder Include="Xml\9\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201805131348263_initial.resx">
