--- a/ProjectExpenseControl/packages.config
+++ b/ProjectExpenseControl/packages.config
@@ -26,7 +26,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="Rotativa" version="1.7.3" targetFramework="net461" />
   <package id="Rotativa.Core" version="2.0.0" targetFramework="net461" />
-  <package id="Rotativa.MVC" version="2.0.3" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
